Style sheet updated with media query

--- a/css/style.css
+++ b/css/style.css
@@ -77,3 +77,9 @@ body, html {
 .ptext .border.transparent {
   background-color: transparent;
 }
+
+@media(max-width:568px){
+  .pimg1, .pimg2, .pimg3, .pimg4 {
+    background-attachment: scroll;
+  }
+}
